# AndroidStudy

./: .gitignore
CmdLineHello/: build.sh  clean.sh  gen_keystore.sh  mykey.keystore
HelloAndroid/: AndroidManifest.xml
HelloAndroid/jni/: Android.mk  com_cch_HelloApp_MainActivity.h  helloAndroidJni.c
HelloAndroid/src/com/cch/HelloApp/: MainActivity.java
Helloworld/: Android.mk  main.cpp  run.sh
Lisp/: case.txt  eval.lisp  eval.lisp.bak  test.lisp
NDKExe/: run.sh
NDKExe/jni/: Android.mk  Application.mk
NDKExe/libs/armeabi/: hello_world
Sync/: Android.mk  main.cpp  run.sh
VideoPlayer/: AndroidManifest.xml
VideoPlayer/res/layout/: main.xml
VideoPlayer/res/raw/: hello.3gp
VideoPlayer/res/values/: strings.xml
VideoPlayer/src/com/cch/: VideoPlayerActivity.java
android_system_service_example/javaclient/src/android/binder/example/: IDemoAPI.java
binder_test/: .clang-format  CMakeLists.txt
binder_test/async_service/: ITestInterface.cpp
binder_test/binder_ctrl/: CMakeLists.txt  binder_ctrl.c
binder_test/calc/: CMakeLists.txt  CalcProto.cpp  ICalcService.cpp  calc_client.cpp  calc_server.cpp
binder_test/calc/inc/test/: BnCalcCallback.h  ICalcCallback.h  ICalcService.h
binder_test/calc/test/: CalcResult.aidl  ICalcCallback.aidl  ICalcService.aidl
binder_test/calc_protobuf/: ICalcCallback.cpp  Rectangle.cpp  calc_client.cpp  calc_server.cpp
binder_test/calc_protobuf/inc/test/: BnCalcService.h  BpCalcCallback.h  BpCalcService.h  CalcProto.h  Rectangle.h
binder_test/calc_protobuf/test/: CalcCommand.aidl  CalcProto.pb.cc  CalcProto.pb.h  CalcProto.proto  ICalcService.aidl  Rectangle.aidl
binder_test/clipboard_service/ipc/: clipboard_service.pb.cc  clipboard_service.pb.h  gen_clipboard_service_cb_impl.cc
binder_test/doc/: aidl.md  aidl_cpp.md
binder_test/kernel_android/: .binder.o.cmd  .binder_alloc.o.cmd  .binder_alloc_selftest.o.cmd  .binderfs.o.cmd  .built-in.a.cmd
binder_test/libs/: CMakeLists.txt
binder_test/libs/binder/: IPCThreadState.cpp  Parcel.cpp  Status.cpp
binder_test/libs/cutils/: ashmem-dev.c  sched_policy.c
binder_test/libs/include/binder/: IInterface.h  Parcel.h  Status.h
binder_test/libs/include/utils/: Errors.h  StrongPointer.h
binder_test/libs/utils/: Errors.cpp
binder_test/login_service/: CallbackInterfaceImpl.cpp  LoginClientImpl.cpp
binder_test/protobuf_c_test/: CMakeLists.txt  person.pb-c.c  person.pb-c.h  person.proto  protobuf_test.cpp
binder_test/protobuf_test/: CMakeLists.txt  protobuf_test.cpp
binder_test/servicemanager/: service_manager.c
binder_test/spwp/: CMakeLists.txt  cycle_ref_test.cpp  light_ref_base.cpp  sp_test.cpp  sp_wp_main.cpp  wp_test.cpp
binder_test/test_service/: server.cpp
device/kiwi/tv/: AndroidProducts.mk  README.txt  kiwi_tv.mk  vendorsetup.sh
spwp/: Android.mk  main.cpp  run.sh
